public/stylesheets/style.css
html, body {
  padding: 0px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
  height: 100%;
  -webkit-margin-collapse: separate;
}

a {
  color: #00B7FF;
}

.body-inner-container {
	width: 990px;
	height: auto !important; /* real browsers */
	height: 100%; /* IE6: treaded as min-height*/
	min-height: 100%; /* real browsers */
	margin: 0px auto;
	padding: 40px 0px 50px 0px;
	background-color: rgba(247, 247, 247, .7)
}

/* Landing Page */

/*img.landing-bg {
	min-height: 100%;
	min-width: 100%;
	position: fixed;
	top: 0;
	left: 0;
}*/

#landing-page-intro-wrap {
	position: absolute;
	left: 50%;
	/* top: 22%; */
	top: 20%;
	margin-left: -245px;
	width: 450px;
	min-height: 200px;
	padding: 20px;
	background: rgba(245,245,245,.95);
	border-radius: 4px;
	box-shadow: 0 0 20px #000;
	text-align: center;
	z-index: 5;
}

#landing-header {
	margin: 0px 0px 5px 0px;
}

#landing-sub-header {
	font-size: 20px;
	font-weight: 500;
	margin: 10px 0px 10px 0px;
}

#landing-welcome {
	border-bottom: 1px solid gray;
	margin-bottom: 15px;
	padding-bottom: 10px;
}

#landing-content {
	font-size: 16px;
}

#signup-free-sub {
	margin-bottom: 7px;
}

#landing-email-input {
	margin-top: 5px;
	margin-bottom: 0px;
}

#landing-password-input {
	margin: 0px 0px 0px 0px;	
}

#landing-signup-container {
	font-size: 15px;
	margin-top: 10px;
}

#landing-sign-up-btn {
	display: inline-block;
	padding: 22px 62px;
	font-size: 24px;
}

#or {
	display: inline-block;
	margin: 0px 10px;	
}

#preview-cta {
	font-size: 18px;
}

#landing-box-footer {
	margin-top: 20px;
}

#go-to-photos-link-container {
	margin-top: 20px;
	font-size: 20px;
}

#thanks-for-joining {
	font-size: 16px;
	margin-bottom: 15px;
}

#signup-terms {
	width: 300px;
	font-size: 12px;
}

#preview-site-container {
	position: absolute;
	/* bottom: 20px; */
	bottom: 12%;
	right: 2%;
	z-index: 5;
}

#preview-site-link {
	color: white;
}

#preview-site-header {
	text-shadow: 2px 2px 10px rgba(0, 0, 0, 1);
	letter-spacing: 0.0em;
	font-weight: 500;
}

#preview-site-link:hover {
	color: rgba(230,230,230,.9);
}

#preview-arrow {
	font-size: 100px;
	font-weight: 100;
	color: white;
	display: inline-block;
	margin-bottom: 5px !important;
	vertical-align: bottom;
}

#landing-content-container {
	display: inline-block;
	position: relative;
	width: 100%;
	background-color: rgba(247, 247, 247, 0.7);
	padding-top: 2%;
}

#landing-content-container-inner {
	width: 990px;
	margin: 0px auto;
}

#myCarousel {
	position: relative;
	height: 90%;
	width: 100%;
	margin: 0px;
}

#carousel-container {
	height: 100%;
	width: 100%;
}

#landing-content-header-wrap {
	text-align: center;
}

#landing-content-header-2 {
	margin-top: 0px;
}

/* Landing preferences modal */

.landing-pref-container {
	margin-bottom: 5px;
}

.landing-pref-checkbox-content {
	display: inline-block;
	margin-left: 5px;
}

.landing-pref-checkbox {
	margin-top: -2px !important;
}

#landing-pref-sub {
	font-size: 16px;
	font-weight: 500;
	margin-bottom: 15px;
}

#landing-pref-submit-btn {
	margin-top: 5px;
}

#landing-pref-form {
	margin-bottom: 0px;
}

/* Landing Carousel */
.carousel-control {
  position: fixed;
  margin-top: 0px !important;
  z-index: 5;
}

/* About page */
.about {
	font-size: 14px;
	margin-top: 15px;
}

#back-to-index {
	margin-top: 20px;
}

#about-left-container {
	padding-right: 20px;	
}

#about-right-container {
	padding-left: 0px;
}

#message {
	width: 370px;
}

.contact {
	font-size: 16px;
}

#contact-send-link {
	margin-top: 5px;
	font-size: 18px;
	font-weight: bold;
}

#landing-signup-form {
	margin-bottom: 0px;	
}

#about-sign-up-btn {
	margin-top: 25px;
}

#about-signup-form {
	margin-top: 15px;
}

#message-sent-thanks {
	margin-top: 20px;
}

.about-container {
	padding: 10px 20px 20px 20px;
}

#zn-pic {
	margin-top: 10px;
	width: 500px;
	height: auto;
}

#about-star {
	height: 20px;
	width: auto;
}

#about-star:hover {
	cursor: pointer;
}

.about-nav {
	margin-left: 10px;
}

/* Demo Photo Modal */

#pro-photo-modal {
	position: absolute;
	top: 5%;
	left: 50%;
	z-index: 1050;
	width: 950px;
	margin-left: -485px;
	padding: 10px;
	background-color: rgba(220, 220, 220, 0.9);
	background-color: rgba(247, 247, 247, 0.9);
	outline: 0;
	-webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
		 -moz-box-shadow: 0 3px 7px rgba(0,0,0,0.3);
		      box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
	-webkit-background-clip: padding-box;
		 -moz-background-clip: padding-box;
		      background-clip: padding-box;
	overflow-y: scroll;	
}

#profile-modal-large-container {
	height: 560px;
	padding: 0px;
	text-align: center;
}

#profile-modal-large-img {
	max-height: 100%;
}

#profile-modal-large-img:hover {
	cursor: pointer;
}

#modal-backdrop-modifed {
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	z-index: 1040;
	background-color: rgba(0, 0, 0, 0.8);
}

#demo-star {
	height: 35px;
	width: 35px;
	float: right;
	margin-right: 5px;
	opacity: .6;
}

.clicked {
	opacity: 1 !important;
} 

#demo-star:hover {
	cursor: pointer;
}

#corner-num {
	float: right;
	font-size: 16px;
	margin-top: -15px;
	margin-right: 5px;
}

/* RESPONSIVE DESIGN */

@media all and (max-width: 1024px) {
    /* styles for narrow desktop browsers and iPad landscape */
}

@media all and (max-width: 768px) {
    /* styles for narrower desktop browsers and iPad portrait */
}

@media all and (max-width: 480px) {
    /* styles for iPhone/Android landscape (and really narrow browser windows) */
}

@media all and (max-width: 320px) {
    .body-container {
    	width: 100%;
    	min-height: 100%;
    	margin: 0px auto 0px auto;
    	padding: 40px 0px;
    	background-color: rgba(247, 247, 247, .8)
    }

    .body-inner-container {
    	width: 990px;
    	margin: 0px auto 0px auto;;
    }
}

@media all and (max-width: 240px) {
    /* styles for smaller devices */
}

/* NAVBAR */

#nav-left-container {
	margin-top: 1px;
	margin-left: -5px;
}
/* ... */

